--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <title>Website Percontohan</title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
