--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Website Percontohan</title>
+        <title>Christian Blog</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
