--- a/starwars.html
+++ b/starwars.html
@@ -108,6 +108,7 @@
       <!-- Change the text to your liking -->
       <div id="board">  
         <div id="content">
+          <p id="title">Coming Soon</p>
           <p id="subtitle">Collections of Christian's Projects</p>
           <br>
           <!-- And make it cheesy ! -->
