--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="starwars.css">
-    <title>Document</title>
+    <title>Soon</title>
 </head>
 <body>
     <audio preload="auto" id="a1">
         <source src="./starwars.mp3" type="audio/mpeg">
     </audio>
     <section class="intro">
-        A long time ago, in a galaxy far,<br> far away....
+        managed by,<br> Christian Reivan....
       </section>
       
       <section class="logo">
