Update for mobile devices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Soon</title>
 </head>
 <body>
-    <audio preload="auto" id="a1">
+    <audio autoplay preload="auto" id="a1">
         <source src="./starwars.mp3" type="audio/mpeg">
     </audio>
     <section class="intro">
